controller + service + dao + hibernate are realized. And a simple login page could be used.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,6 +15,7 @@ log4j.logger.org.springframework.beans=debug
 log4j.logger.org.springframework.context=debug
 log4j.logger.org.springframework.http=debug
 log4j.logger.org.springframework.web=debug
+log4j.logger.org.springframework.orm=debug
  
 #log4j.logger.org.hibernate.tutorial=debug
 log4j.logger.com.etech.ha=debug
