--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.logger.org.springframework.web=debug
 log4j.logger.org.springframework.orm=debug
  
 #log4j.logger.org.hibernate.tutorial=debug
-log4j.logger.com.etech.ha=debug
+log4j.logger.com.etech=debug
 
 
 
