--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,19 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<filter>
+		<filter-name>AccessCheckFilter</filter-name>
+		<filter-class>com.etech.system.filter.AccessCheckFilter</filter-class>
+		<init-param>
+			<param-name>excludePath</param-name>
+			<param-value>/resources,/index,/login</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>AccessCheckFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	<!-- 
 		当前台JSP页面和JAVA代码中使用了不同的字符集进行编码的时候就会出现表单提交的数据或者上传/下载中文名称文件出现乱码的问题
 		但Struts2的话, 中文问题已经不是问题了，可以通过配置struts.i18n.encoding常量来实现统一字符编码。
