最终决定还是禁用springEL表达式

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 	<context-param>
 		<description>Spring Expression Language Support</description>
 		<param-name>springJspExpressionSupport</param-name>
-		<param-value>true</param-value>
+		<param-value>false</param-value>
 	</context-param>
 	
 	<filter>
